[tool.poetry]
name = "lodek-bookman"
version = "0.5.0"
description = "Small CLI tool to manage a local library."
authors = ["Bruno Gomes <lodek@protonmail.com>"]
readme = "Readme.md"
homepage = "https://gitlab.com/Lodek/bookman"
repository = "https://gitlab.com/Lodek/bookman"
packages = [
    { include = "bookman"},
]

[tool.poetry.scripts]
bookman = "bookman.bookman:main"

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.9.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
