[tool.poetry]
name = "lodek-bookman"
version = "0.2.0"
description = "Small CLI tool to manage a local library."
authors = ["Bruno Gomes <lodek@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/Lodek/bookman"
repository = "https://github.com/Lodek/bookman"
packages = [
    { include = "bookman"},
]

[tool.poetry.scripts]
bookman = "bookman.bookman:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
